webservice1/nginx/overlays/blue/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      containers:
      - name: nginx
        ports:
        - containerPort: 8080
